--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,12 @@ local.properties
 # Windows thumbnail db
 Thumbs.db
 
-# OSX files
+#####
+# OS X temporary files that should never be committed
 .DS_Store
+*.swp
+*.lock
+profile
 
 # Eclipse project files
 .classpath
@@ -28,3 +32,48 @@ obj/
 #Java bin
 *.jar
 *.class
+
+# xCode
+xcuserdata/
+
+####
+# AppCode
+.idea/
+
+####
+# Other Xcode files
+profile
+*.hmap
+*.ipa
+
+####
+# CocoaPods
+Pods/
+!Podfile
+!Podfile.lock
+
+####
+# Xcode temporary files that should never be committed
+*~.nib
+
+####
+# Objective-C/Swift specific
+*.hmap
+*.ipa
+
+####
+# Xcode build files
+DerivedData/
+build/
+Builds/
+
+#####
+# Xcode private settings (window sizes, bookmarks, breakpoints, custom executables, smart groups)
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
